migrate to jdk 21